--- a/client/src/components/AdminPanel/NewAdminPanel.css
+++ b/client/src/components/AdminPanel/NewAdminPanel.css
@@ -1,12 +1,18 @@
 .panel_home{
-	background-color: #ADC0B7;
+	background-color: #343a40;
+	max-width: 25%;
+	min-height: min-content;
+	height: 50rem;
 	width: 25%;
 	align-items: baseline;
 	align-content: flex-start;
 }
-
+.panel_home b{
+	color: white;
+}
 .panel_home button{
-	margin: 5%;
+	margin-left: 5%;
+	margin-right: 5%;
 	max-width: 90%;
 	width: 90%;
 }
